chore(catalog): menu samples  k replaced by ak

--- a/sample/src/samples/menu/api.html
+++ b/sample/src/samples/menu/api.html
@@ -3,7 +3,7 @@
   <div id="example">
 
     <div class="demo-section k-content wide">
-      <ul id="menu" ref="menuDiv" k-menu="k-data-source.bind: dataSource; k-widget.two-way: menu"></ul>
+      <ul id="menu" ref="menuDiv" ak-menu="k-data-source.bind: dataSource; k-widget.two-way: menu"></ul>
     </div>
 
     <div class="box wide">
