--- a/sample/src/samples/menu/context-menu.html
+++ b/sample/src/samples/menu/context-menu.html
@@ -35,8 +35,8 @@
 
 
     <ul id="menu"
-        k-contextmenu="k-orientation.two-way: orientation; k-target: #listview-context-menu; k-filter: .product; k-animation.bind: animation;"
-        k-contextmenu.ref="contextVM">
+        ak-contextmenu="k-orientation.two-way: orientation; k-target: #listview-context-menu; k-filter: .product; k-animation.bind: animation;"
+        ak-contextmenu.ref="contextVM">
       <li>
         <img src="http://demos.telerik.com/kendo-ui/content/web/toolbar/reply.png" /> Reply
         <ul>
