--- a/sample/src/samples/menu/images.html
+++ b/sample/src/samples/menu/images.html
@@ -5,7 +5,7 @@
 
       <h4>Menu with images</h4>
 
-      <ul id="menu-images" k-menu="k-data-source.bind: dataSource"></ul>
+      <ul id="menu-images" ak-menu="k-data-source.bind: dataSource"></ul>
     </div>
 
 
@@ -13,7 +13,7 @@
 
       <h4>Menu with sprites</h4>
 
-      <div id="menu-sprites" k-menu="k-data-source.bind: spritesDS"></div>
+      <div id="menu-sprites" ak-menu="k-data-source.bind: spritesDS"></div>
     </div>
   </div>
 </template>
