--- a/sample/src/samples/menu/animation-effects.html
+++ b/sample/src/samples/menu/animation-effects.html
@@ -2,7 +2,7 @@
   <div id="example">
 
     <div class="demo-section k-content">
-      <ul id="menu" k-menu k-menu.ref="menuVM">
+      <ul id="menu" ak-menu ak-menu.ref="menuVM">
         <li>
           Furniture
           <ul> <!-- moving the UL to the next line will cause an IE7 problem -->
