--- a/sample/src/samples/menu/orientation.html
+++ b/sample/src/samples/menu/orientation.html
@@ -3,7 +3,7 @@
 
     <div class="demo-section k-content">
 
-      <ul id="menu" k-menu k-menu.ref="menuVM">
+      <ul id="menu" ak-menu ak-menu.ref="menuVM">
         <li>
           Men's
           <ul>
