fix(dropdownlist): allow workaround for #442 with dropdownlist like multiselect component (@JeroenVinke)

--- a/sample/src/samples/dropdownlist/virtualization.html
+++ b/sample/src/samples/dropdownlist/virtualization.html
@@ -7,6 +7,7 @@
                               k-filter="contains"
                               k-virtual.bind="virtual"
                               k-height.bind="290"
+                              k-no-value-binding.bind="true"
                               k-data-source.bind="dataSource"
                               style="width: 100%">
               <ak-template>
