--- a/sample/src/samples/progressbar/events.html
+++ b/sample/src/samples/progressbar/events.html
@@ -3,7 +3,7 @@
     <div class="demo-section k-content">
       <h4>ProgressBar</h4>
       <div id="eventsProgressBar"
-           k-progress-bar="k-min: 0;
+           ak-progress-bar="k-min: 0;
                            k-max: 10;
                            k-type: percent;
                            k-widget.bind: pb"
