--- a/sample/src/samples/datetimepicker/disable-dates.html
+++ b/sample/src/samples/datetimepicker/disable-dates.html
@@ -2,11 +2,11 @@
     <div id="example">
       <div class="demo-section k-content" style="text-align: center;">
 				<h4>Disable weekends</h4>
-				<input ak-datetimepicker="k-value.bind: firstDate" k-disable-dates.bind="['sa', 'su']"/>
+				<input ak-datetimepicker="k-value.bind: firstDate; k-disable-dates.bind: ['sa', 'su']"/>
 
 				<h4 style="margin-top:1em">Disable Federal Holidays in USA in 2015</h4>
-				<input ak-datetimepicker="k-value.bind: today" k-dates.bind="holidays"
-                    k-disable-dates.call="disableDates($event)"/>
+				<input ak-datetimepicker="k-value.bind: today; k-dates.bind: holidays;
+                                  k-disable-dates.call: disableDates($event)"/>
 			</div>
     </div>
 </template>
