fix(all): allow repeaters in ak-templates
fixes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues/450

--- a/sample/src/samples/grid/advanced.html
+++ b/sample/src/samples/grid/advanced.html
@@ -15,6 +15,15 @@
         ${ContactName | capitalize}
       </ak-template>
     </ak-col>
+    <ak-col k-title="Phonenumbers">
+      <ak-template>
+        <ul>
+          <li repeat.for="phoneNumber of PhoneNumbers">
+            ${phoneNumber}
+          </li>
+        </ul>
+      </ak-template>
+    </ak-col>
     <ak-col k-title="Contact Name" k-field="ContactName">
       <ak-template for="headerTemplate">
         ${'Contact' + 'Name'}
