--- a/sample/src/help/help.html
+++ b/sample/src/help/help.html
@@ -19,6 +19,9 @@
 
             <h4>Github</h4>
             We also monitor <a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues" target="_blank">issues</a> on Github.
+
+            <h4>GistRun<h4></h4>
+            For any problems using this bridge that are not simple enough to be resolved in our Gitter room, check the <a href="http://localhost:3000/#/help/docs/troubleshooting/introduction" target="_blank">Troubleshooting section</a>
           </div>
         </div>
     </section>
