--- a/sample/src/samples/maskedtextbox/events.html
+++ b/sample/src/samples/maskedtextbox/events.html
@@ -1,7 +1,7 @@
 <template>
     <div id="example">
         <div class="demo-section k-content">
-            <h4>Select date</h4>
+            <h4>Enter phone number</h4>
             <input ak-maskedtextbox="k-value.two-way: value; k-mask: (999) 000-0000"
                    k-on-change.delegate="logChange()"
                    style="width: 100%" />
