--- a/sample/src/samples/timepicker/events.html
+++ b/sample/src/samples/timepicker/events.html
@@ -1,7 +1,7 @@
 <template>
     <div id="example">
         <div class="demo-section k-content">
-            <h4>Select date</h4>
+            <h4>Select time</h4>
             <input ak-timepicker="k-value.two-way: value"
                    k-on-change.delegate="logChange()"
                    k-on-open.delegate="logger.log('open')"
