--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -38,7 +38,7 @@
               <li>Use Kendo UI components in your Aurelia application <i style="text-decoration:underline">without writing any wrapper code</i></li>
               <li>Powerful binding expressions <i>directly in your markup</i></li>
               <li>Full support for Aurelia's templating system in Kendo templates</li>
-              <li><a href="#samples">See the catalog</a> or check out the example below</li>
+              <li><a href="#samples">See the catalog</a> or check out the example in the second tab</li>
             </ul>
           </h4>
         </section>
