feat(template-compiler): support $this in templates
BREAKING CHANGE: $$item has been removed and $this should be used now

closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues/339

--- a/sample/src/samples/grid/advanced.html
+++ b/sample/src/samples/grid/advanced.html
@@ -30,5 +30,10 @@
         <button ak-button click.delegate="showAlert('Button clicked')">Test</button>
       </ak-template>
     </ak-col>
+    <ak-col>
+      <ak-template>
+        <button ak-button click.delegate="log($this)">Log $this</button>
+      </ak-template>
+    </ak-col>
   </ak-grid>
 </template>
