--- a/sample/src/samples/scheduler/api.html
+++ b/sample/src/samples/scheduler/api.html
@@ -4,7 +4,7 @@
     <div class="box wide">
       <div class="box-col">
         <h4>Current Date</h4>
-        <input k-datepicker="k-value.two-way: currentDate;" />
+        <input ak-datepicker="k-value.two-way: currentDate;" />
       </div>
       <div class="box-col">
         <h4>Current View</h4>
