--- a/sample/src/samples/validator/custom-validation.html
+++ b/sample/src/samples/validator/custom-validation.html
@@ -18,12 +18,12 @@
           </li>
           <li>
             <label for="HireDate">Hire Date:</label>
-            <input type="text" k-datepicker id="HireDate" name="HireDate" data-type="date" required="required"  />
+            <input type="text" ak-datepicker id="HireDate" name="HireDate" data-type="date" required="required"  />
             <span data-for='HireDate' class='k-invalid-msg'></span>
           </li>
           <li>
             <label for="RetireDate">Retire Date:</label>
-            <input type="text" k-datepicker name="RetireDate" data-greaterdate-field="HireDate" data-greaterdate-msg='Retire date should be after Hire date' />
+            <input type="text" ak-datepicker name="RetireDate" data-greaterdate-field="HireDate" data-greaterdate-msg='Retire date should be after Hire date' />
             <span data-for='RetireDate' class='k-invalid-msg'></span>
           </li>
           <li>
