--- a/sample/src/samples/calendar/api.html
+++ b/sample/src/samples/calendar/api.html
@@ -18,7 +18,7 @@
               <h4>Set value</h4>
               <ul class="options">
                   <li>
-                      <input k-datepicker="k-value.two-way: dateVal" />
+                      <input ak-datepicker="k-value.two-way: dateVal" />
                       <button ak-button click.delegate="calendar.value(dateVal)">Set date</button>
                   </li>
               </ul>
