--- a/sample/src/samples/qrcode/api.html
+++ b/sample/src/samples/qrcode/api.html
@@ -3,7 +3,7 @@
   <div id="example">
 
     <div class="demo-section k-content">
-      <div ak-qrcode="k-widget.two-way: qrcode; k-size.bind: 200; k-value.bind = qrValue "></div>
+      <div ak-qrcode="k-widget.two-way: qrcode; k-size.bind: 200; k-value.bind: qrValue "></div>
     </div>
 
     <div class="box wide" id="qrConfig">
