--- a/sample/src/samples/datepicker/basic-usage.html
+++ b/sample/src/samples/datepicker/basic-usage.html
@@ -5,7 +5,10 @@
             <input id="datepicker" ak-datepicker="k-value.bind:'10/10/2011'" style="width: 100%" />
 
             <h4 style="margin-top: 2em;">Add to archive mail from:</h4>
-            <input id="monthpicker" ak-datepicker="k-value.bind:'November 2011'; k-start.bind:'year'; k-depth.bind: 'year';k-format.bind:'MMMM yyyy';" style="width: 100%" />
-            </p>
+            <input id="monthpicker"
+                   ak-datepicker="k-value.bind:'November 2011';
+                                  k-start.bind:'year';
+                                  k-depth.bind: 'year';
+                                  k-format.bind:'MMMM yyyy';" style="width: 100%" />
         </div>
 </template>
