chore(catalog): improved help/support tab

--- a/sample/src/catalog-index/controls.html
+++ b/sample/src/catalog-index/controls.html
@@ -7,7 +7,7 @@
            <br>
 
            <!-- page title - single column -->
-           <div class="row">
+<!--            <div class="row">
                <div class="col-xs-12 col-sm-12">
                    <p>
                        <span style="font-size:18px">
@@ -21,7 +21,7 @@
                    <br>
                    <br>
                </div>
-           </div>
+           </div> -->
 
            <!-- page content - five columns -->
            <div class="row">
