--- a/sample/src/help/help.html
+++ b/sample/src/help/help.html
@@ -2,26 +2,101 @@
     <require from="./doc"></require>
     <section>
         <h4>Components Catalog Help</h4>
+
         <div ak-tabstrip="k-widget.bind: tabstrip" k-on-select.delegate="tabSelected($event.detail)">
           <ul>
               <li ref="docs" class="k-state-active" data-tab="docs">Components Docs</li>
               <li ref="support" data-tab="support">Support</li>
           </ul>
+
+          <!-- Components Docs Tab content-->
           <div style="height: 790px;">
             <doc></doc>
           </div>
+
+          <!-- Support Tab content  -->
           <div>
-            <h4>Gitter</h4>
-            <p>Do you need some help? We can help you out in our Gitter room.</p>
-            <a href="https://gitter.im/adriatic/Aurelia-KendoUI?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge" target="_blank">
-              <img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;">
-            </a>
+            <div class="container" style="padding: 10px">
+              <div class="row">
+                <div class="col-md-6">
+                <div style="border-style: solid; border-width: 1px; border-color: gray; height: 140px; padding: 10px">
+                    <h4>Gitter</h4>
+                    <p>Do you need some immediate help? We can provide it in our Gitter room, for very basic questions that can be resolved without you having the more detailed context of your problem and assuming that someone from our team is logged in.</p>
+                    <a href="https://gitter.im/adriatic/Aurelia-KendoUI?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge" target="_blank">
+                      <img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;">
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div style="border-style: solid; border-width: 1px; border-color: gray; height: 140px; padding: 10px">
+                    <h4>Github</h4>
+                    We also monitor <b><a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues" target="_blank">issues</a></b> on Github and that is the recommended way to ask for help when you need to provide more context, including code sections, textual comments and screenshots.
+                    <br><br><br>
 
-            <h4>Github</h4>
-            We also monitor <a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues" target="_blank">issues</a> on Github.
+                    See <b><a href="https://guides.github.com/features/issues/" target="_blank">this article</a></b> for more information in GitHub issues feature.
+                  </div>
+                </div>
+              </div>
+              <br>
 
-            <h4>GistRun<h4></h4>
-            For any problems using this bridge that are not simple enough to be resolved in our Gitter room, check the <a href="http://localhost:3000/#/help/docs/troubleshooting/introduction" target="_blank">Troubleshooting section</a>
+              <div class="row">
+                <div class="col-md-12">
+                  <div style="border-style: solid; border-width: 1px; border-color: gray;  padding: 10px; height:400px">
+                    <h4>GistRun</h4>
+                    For any problems using this bridge that are not simple enough to be resolved in our Gitter room and you are willing to
+                    "substantiate" your problem report by adding a <b>gist</b> - check the <a href="http:#/help/docs?category=troubleshooting&file=2._using_gists_and_gistrun" target="_blank">Troubleshooting section - using GistRun to report problems</a> for details on this procedure. The information below is a summary of that article.
+
+                    <!-- GistRun left inner box -->
+                    <div style="padding-top: 20px; ">
+                     <div class="col-md-5">
+                        <div style="border-style: none; border-width: 1px; border-color: gray; height: 300px; padding-top: 20px; padding-left: 0; font-size: 1.3em">
+
+                          <ol type="1">
+                            <li>
+                            Create a <b>new</b> problem report <b><a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues">here</a></b>.
+                            </li>
+                            <br>
+
+                            <li>
+                            Fork a <b>new</b> gist from <b><a href="https://gist.github.com/adriatic/c6a05892747c35d643ac4833af411117">here</a></b>.
+                            </li>
+                            <br>
+
+                            <li>
+                            Open the gist created in step 2 above with <b><a href="https://gist.run/">GistRun</a></b> application.
+                            </li>
+                            <br>
+
+                            <li>
+                            Add your problem specific code to your gist (using GistRun editor).
+                            </li>
+                            <br>
+
+                            <li>
+                            Run your gist to verify the problem is still present.
+                            </li>
+                            <br>
+
+                            <li>
+                            Add this gist's ID to your problem report.
+                            </li>
+                          </ul>
+
+                        </div>
+                      </div>
+
+                      <!-- GistRun right inner box -->
+                      <div class="col-md-6" style="padding-left: 40px">
+                        <div style="border-style: none; border-width: 1px; border-color: gray; height: 300px; padding-top: 40px; padding-left: 20px">
+                          <img src="https://cloud.githubusercontent.com/assets/2712405/15270572/8e1ecbe8-19f2-11e6-9532-04e0078b15b5.png"
+                          style="border: 1px solid gray">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
     </section>
