chore(sample): update help page

--- a/sample/src/help/help.html
+++ b/sample/src/help/help.html
@@ -41,7 +41,7 @@
 
               <div class="row">
                 <div class="col-md-12">
-                  <div style="border-style: solid; border-width: 1px; border-color: gray;  padding: 10px; height:400px">
+                  <div style="border-style: solid; border-width: 1px; border-color: gray;  padding: 10px;">
                     <h4>GistRun</h4>
                     For any problems using this bridge that are not simple enough to be resolved in our Gitter room and you are willing to
                     "substantiate" your problem report by adding a <b>gist</b> - check the <a href="http:#/help/docs?category=troubleshooting&file=2._using_gists_and_gistrun" target="_blank">Troubleshooting section - using GistRun to report problems</a> for details on this procedure. The information below is a summary of that article.
@@ -49,21 +49,17 @@
                     <!-- GistRun left inner box -->
                     <div style="padding-top: 20px; ">
                      <div class="col-md-5">
-                        <div style="border-style: none; border-width: 1px; border-color: gray; height: 300px; padding-top: 20px; padding-left: 0; font-size: 1.3em">
+                        <div style="border-style: none; border-width: 1px; border-color: gray; padding-top: 20px; padding-left: 0; font-size: 1.3em">
 
                           <ol type="1">
                             <li>
-                            Create a <b>new</b> problem report <b><a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues">here</a></b>.
+                            Create a <b>new</b> problem report <b><a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues" target="_blank">here</a></b>.
                             </li>
                             <br>
 
                             <li>
-                            Fork a <b>new</b> gist from <b><a href="https://gist.github.com/adriatic/c6a05892747c35d643ac4833af411117">here</a></b>.
-                            </li>
-                            <br>
-
-                            <li>
-                            Open the gist created in step 2 above with <b><a href="https://gist.run/">GistRun</a></b> application.
+                            Open <a href="https://gist.run/?id=809bf843b45efdf8589179f88fd1e507" target="_blank">this gist</a> and click the Create Public Gist button in the top right corner:
+                            <img src="http://i.imgur.com/kE4patJ.png" />
                             </li>
                             <br>
 
@@ -78,7 +74,13 @@
                             <br>
 
                             <li>
-                            Add this gist's ID to your problem report.
+                            Click the "Update Gist" button in the top right corner:
+                            <img src="http://i.imgur.com/1vwWXjI.png" />
+                            </li>
+                            <br>
+
+                            <li>
+                            Copy the URL into your problem report.
                             </li>
                           </ul>
 
@@ -92,6 +94,8 @@
                           style="border: 1px solid gray">
                         </div>
                       </div>
+
+                      <div style="clear: both"></div>
                     </div>
                   </div>
                 </div>
