feat(support): add basic info on support exchange service

--- a/sample/src/help/help.html
+++ b/sample/src/help/help.html
@@ -6,7 +6,8 @@
         <div ak-tabstrip="k-widget.bind: tabstrip" k-on-select.delegate="tabSelected($event.detail)">
           <ul>
               <li ref="docs" class="k-state-active" data-tab="docs">Components Docs</li>
-              <li ref="support" data-tab="support">Support</li>
+              <li data-tab="free-support">Free support options</li>
+              <li data-tab="support-exchange">Support Exchange</li>
           </ul>
 
           <!-- Components Docs Tab content-->
@@ -102,6 +103,28 @@
               </div>
             </div>
           </div>
+
+          <!-- Suport Exchange Tab -->
+          <div>
+            <div class="container" style="padding: 10px">
+              <div class="row">
+                <div class="col-md-12">
+                  <div style="border-style: solid; border-width: 1px; border-color: gray; height: 340px; padding: 10px">
+                    <h4>Support Exchange</h4>
+                    <br><br>
+                    <div style="font-size: 1.3em; width: 96%">
+                      We are planning to offer the service exchange where all users of Aureila-UI-Toolkits bridges can register request for any type of help with their applications: find a bug, design and / or implement their application or simply provide a guidance in their projects. Such requests will matched with members of Aurelia Community that are interesting to provide help for a fee.
+                      <br><br>
+                      Please register your interest by answering to this <a href=" http://goo.gl/ZhCGZC" target="_blank">poll</a> and visit the Gitter
+                      <a href="https://gitter.im/aurelia-ui-toolkits/support-exchange" target="_blank">Support Exchange</a> chat room for more information
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
     </section>
 </template>
