--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -17,6 +17,9 @@
         <a href="#">Theme</a>
     </li>
     <li>
+        <a route-href="route: documentation">Documentation</a>
+    </li>
+    <li>
         <a route-href="route: help">Help</a>
     </li>
   </ul>
