--- a/sample/src/shared/collapse-panel.html
+++ b/sample/src/shared/collapse-panel.html
@@ -4,7 +4,7 @@
             <div class="panel-heading">
                 <strong>${title}</strong>
 
-                <slot select=".buttons"></slot>
+                <slot name="buttons"></slot>
             </div>
             <div class="panel-body">
                 <slot></slot>
