fix(children): remove @children usage

--- a/sample/index.html
+++ b/sample/index.html
@@ -15,7 +15,7 @@
       <i class="fa fa-spinner fa-spin"></i>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.4.0/bluebird.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.4.0/bluebird.min.js"></script>
     <script src="http://kendo.cdn.telerik.com/2016.1.112/js/jszip.min.js"></script>
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
