--- a/sample/index.html
+++ b/sample/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Aurelia Catalog</title>
     <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.6.3/css/font-awesome.min.css">
+    <script src="http://kendo.cdn.telerik.com/2016.2.607/styles/kendo.common.min.css"></script>
     <link rel="stylesheet" href="styles/samples.css">
     <link rel="stylesheet" href="styles/styles.css">
 
@@ -16,6 +17,9 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.4.0/bluebird.min.js"></script>
+<!--     <script src="http://kendo.cdn.telerik.com/2016.2.607/js/kendo.all.min.js"></script>
+ -->
+    <script src="vendors/js/kendo.tabstrip.min.js"></script>
     <script src="http://kendo.cdn.telerik.com/2016.1.112/js/jszip.min.js"></script>
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
