--- a/sample/index.html
+++ b/sample/index.html
@@ -17,9 +17,11 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.4.0/bluebird.min.js"></script>
-<!--     <script src="http://kendo.cdn.telerik.com/2016.2.607/js/kendo.all.min.js"></script>
- -->
-    <script src="vendors/js/kendo.tabstrip.min.js"></script>
+
+    <script src="vendors/js/jquery.min.js"></script>
+    <script src="vendors/js/data.min.js"></script>
+    <script src="vendors/js/kendo.core.min.js"></script>
+
     <script src="http://kendo.cdn.telerik.com/2016.1.112/js/jszip.min.js"></script>
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
