--- a/sample/index.html
+++ b/sample/index.html
@@ -3,10 +3,15 @@
   <head>
     <title>Aurelia Catalog</title>
     <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.6.3/css/font-awesome.min.css">
-    <!-- <script src="http://kendo.cdn.telerik.com/2016.2.607/styles/kendo.common.min.css"></script> -->
+
     <link rel="stylesheet" href="styles/samples.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="kendo-sdk/styles/kendo.common.min.css">
 
+<!--
+    <script src="kendo-sdk/styles/kendo.common.min.css"></script>
+    <script src="http://kendo.cdn.telerik.com/2016.1.226/styles/kendo.common.min.css"></script>
+-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -18,13 +23,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.4.0/bluebird.min.js"></script>
 
-
-    <script src="jspm_packages/github/components/jquery@2.2.4/jquery.min.js"></script>
-
-    <script src="http://kendo.cdn.telerik.com/2016.2.607/js/kendo.ui.core.min.js"></script>
-    <script src="http://kendo.cdn.telerik.com/2016.2.607/js/kendo.tabstrip.min.js"></script>
-
-    <script src="http://kendo.cdn.telerik.com/2016.2.607/js/jszip.min.js"></script>
+    <script src="kendo-sdk/js/jquery.min.js"></script>
+    <script src="kendo-sdk/js/jszip.min.js"></script>
+    <script src="kendo-sdk/js/kendo.all.min.js"></script>
 
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
