jQuery "defensive programming"

--- a/sample/src/samples/generic/use-widget-on-initialization.html
+++ b/sample/src/samples/generic/use-widget-on-initialization.html
@@ -1,5 +1,5 @@
 <template>
   <!-- creates the datepicker property on the view-model -->
-  <!-- this is the equivalent of $('input').kendoDatePicker() -->
+  <!-- this is the equivalent of kendo.jQuery('input').kendoDatePicker() -->
   <input ak-datepicker="k-widget.bind: datepicker" />
 </template>
