--- a/sample/src/sample-runner.html
+++ b/sample/src/sample-runner.html
@@ -2,7 +2,7 @@
     <section>
         <collapse-panel title.bind="sample.title">
           <div slot="buttons" class="buttons">
-            <a href.bind="sample.gist" show.bind="sample.gist" target="_blank" class="k-button">RUN</a>
+            <a href="https://gist.run/?id=${sample.gist}" show.bind="sample.gist" target="_blank" class="k-button">RUN</a>
             <a href.bind="sample.documentation" show.bind="sample.documentation" target="_blank" class="k-button">API</a>
           </div>
           <div id="exampleWrap">
@@ -18,27 +18,27 @@
                     <li show.bind="sample.js">Javascript</li>
                     <li show.bind="sample.css">CSS</li>
                     <li show.bind="sample.json">JSON</li>
-                    <li show.bind="sample.md">Documentation</li>
+                    <!-- <li show.bind="sample.md">Documentation</li> -->
                 </ul>
                 <div>
-                    <au-code language="markup" url.bind="sample.html">
+                    <au-code language="markup" text.bind="sample.html">
                     </au-code>
                 </div>
                 <div>
-                    <au-code language="javascript" url.bind="sample.js">
+                    <au-code language="javascript" text.bind="sample.js">
                     </au-code>
                 </div>
                 <div>
-                    <au-code language="css" url.bind="sample.css">
+                    <au-code language="css" text.bind="sample.css">
                     </au-code>
                 </div>
                 <div>
-                    <au-code language="javascript" url.bind="sample.json">
+                    <au-code language="javascript" text.bind="sample.json">
                     </au-code>
                 </div>
                 <div>
-                    <au-markdown url.bind="sample.md">
-                    </au-markdown>
+                    <!-- <au-markdown url.bind="sample.md">
+                    </au-markdown> -->
                 </div>
             </div>
         </collapse-panel>
